ast/src/snapshots/transmute_ast__parser__tests__struct_valid_one_field.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "S",
            IdentId(1) => "a",
            IdentId(2) => "number",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:15; [14, 20],
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:8; [7, 8],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(1),
                                span: 1:12; [11, 12],
                            },
                            type_def_id: TypeDefId(0),
                            span: 1:12; [11, 20],
                        },
                    ],
                ),
                span: 1:1; [0, 22],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    IdentRefId(0),
                ),
                span: 1:15; [14, 20],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
