ast/src/snapshots/transmute_ast__parser__tests__struct_valid_several_fields.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "a",
            IdentId(3) => "number",
            IdentId(4) => "b",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:15; [14, 20],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:26; [25, 31],
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 1:8; [7, 8],
                    },
                    [],
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(2),
                                span: 1:12; [11, 12],
                            },
                            type_def_id: TypeDefId(0),
                            span: 1:12; [11, 20],
                        },
                        Field {
                            identifier: Identifier {
                                id: IdentId(4),
                                span: 1:23; [22, 23],
                            },
                            type_def_id: TypeDefId(1),
                            span: 1:23; [22, 31],
                        },
                    ],
                ),
                span: 1:1; [0, 33],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:15; [14, 20],
            },
            TypeDefId(1) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(1),
                    ],
                ),
                span: 1:26; [25, 31],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
