ast/src/snapshots/transmute_ast__parser__tests__struct_valid_zero_field.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:8; [7, 8],
                    },
                    [],
                ),
                span: 1:1; [0, 12],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
