ast/src/snapshots/transmute_ast__parser__tests__structs_as_root.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { } struct S { }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "S",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:8; [7, 8],
                    },
                    [],
                ),
                span: 1:1; [0, 12],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:21; [20, 21],
                    },
                    [],
                ),
                span: 1:14; [13, 25],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
            StmtId(1),
        ],
    },
)
