ast/src/snapshots/transmute_ast__parser__tests__use_simple.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "a",
            IdentId(2) => "b",
            IdentId(3) => "c",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:5; [4, 5],
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:7; [6, 7],
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:9; [8, 9],
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Use(
                    [
                        IdentRefId(0),
                        IdentRefId(1),
                        IdentRefId(2),
                    ],
                ),
                span: 1:1; [0, 10],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
