ast/src/snapshots/transmute_ast__parser__tests__while_loop.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"while true { 42; }\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 1:7; [6, 10],
                    },
                ),
                span: 1:7; [6, 10],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:14; [13, 15],
                    },
                ),
                span: 1:14; [13, 15],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Block(
                    [
                        StmtId(0),
                    ],
                ),
                span: 1:12; [11, 18],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: While(
                    ExprId(0),
                    ExprId(2),
                ),
                span: 1:1; [0, 18],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:14; [13, 16],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(3),
                ),
                span: 1:1; [0, 18],
            },
        ],
        roots: [
            StmtId(1),
        ],
    },
)
